--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --radius: 0.5rem;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.box {
+  position: relative;
+  max-height: 300px;
+  overflow: hidden;
+  box-shadow: 0 1.4px 1.7px rgba(0, 0, 0, 0.017), 0 3.3px 4px rgba(0, 0, 0, 0.024), 0 6.3px 7.5px rgba(0, 0, 0, 0.03), 0 11.2px 13.4px rgba(0, 0, 0, 0.036), 0 20.9px 25.1px rgba(0, 0, 0, 0.043), 0 50px 60px rgba(0, 0, 0, 0.06);
+}
+
+.box:hover:before {
+  transition: all 0.3s ease-in-out;
+}
+.box .img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease-in-out;
+}
+.box .img:hover {
+  transition: all 0.3s ease-in-out;
+}
+.box .img:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.box .img:hover {
+  transition: all 0.3s ease-in-out;
+}
+.zoom-in:hover .img {
+  transform: scale(1.1);
+}
+
+.postcard:hover .img {
+  filter: opacity(0.7);
+  transform: translate3d(-30px, 0, 0);
+}
+
+.zoom-out .img {
+  transform: scale(1.1);
+}
+.zoom-out:hover .img {
+  transform: scale(1);
+  filter: contrast(70%);
+}
+
+
+.box2:hover {
+  width: 466px;
+  height: 400px;
 }
